# langchain-provider

./: .gitignore  .pre-commit-config.yaml  AUTHORS.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.txt  README.md  RELEASE.md  pyproject.toml
.github/scripts/: generate-without-spyder.py
.github/workflows/: linux-tests.yml  macos-tests.yml  windows-tests.yml
completion_provider/: __init__.py  client.py  provider.py
completion_provider/parsing/tests/: test_parsing.py
completion_provider/providers/: document.py
completion_provider/utils/: status.py
completion_provider/widgets/: __init__.py  status.py
kite_provider/: __init__.py  client.py  decorators.py  provider.py
kite_provider/parsing/: __init__.py
kite_provider/parsing/tests/: __init__.py  test_parsing.py
kite_provider/providers/: __init__.py  document.py
kite_provider/utils/: __init__.py
kite_provider/utils/tests/: __init__.py
kite_provider/widgets/: status.py
langchain_provider/: __init__.py  client.py  provider.py
langchain_provider/parsing/tests/: test_parsing.py
langchain_provider/providers/: __init__.py  document.py
langchain_provider/utils/: status.py
langchain_provider/widgets/: __init__.py  config_dialog.py  status.py
requirements/: conda.txt  tests.txt
