[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-provider"
version = "0.2.0.dev0"
description = "Langchain based completions provider for Spyder"
authors = [
    {name = "Spyder Project Contributors", email = "spyder.python@gmail.com"},
]
license = {text = "MIT license"}
dependencies = [
  "langchain-core>=1.2.14,<1.3",
  "langchain-community>=0.4.1,<1.0",
  "openai>=2.21.0,<3.0",
  "pydantic>=2.12.5",
  "qtawesome",
  "qtpy",
  "spyder>=6.1.0"
]
requires-python = ">= 3.9"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

[project.optional-dependencies]
extras = ["pre-commit"]

[project.urls]
Homepage = "https://github.com/spyder-ide/langchain-provider"

[project.entry-points."spyder.completions"]
langchain = "langchain_provider.provider:LangchainProvider"
